[fix] text overlap in banner

--- a/blocks/curated-cards/curated-cards.css
+++ b/blocks/curated-cards/curated-cards.css
@@ -151,7 +151,7 @@
   }
 
   .curated-cards .feature-card .feature-card-content .feature-card-content-text {
-    width: 85%;
+    width: 100%;
   }
 
   .curated-cards .feature-card .feature-card-content .feature-card-link {
